--- a/RReplay/App.xaml
+++ b/RReplay/App.xaml
@@ -21,8 +21,13 @@
         
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Ressources/Icons.xaml" />
-                <ResourceDictionary Source="Skins/Theme.xaml" />
-                <ResourceDictionary Source="Skins/CustomThemes.xaml" />
+                
+                <!-- MahApps -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Red.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
