--- a/RReplay/View/MainWindow.xaml
+++ b/RReplay/View/MainWindow.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="RReplay.MainWindow"
+﻿<Controls:MetroWindow x:Class="RReplay.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:ignore="http://www.galasoft.ch/ignore"
         xmlns:views="clr-namespace:RReplay.View"
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
@@ -13,7 +14,11 @@
         MinWidth="900"
         Width="796.915"
         Title="RReplay"
-        Background="{DynamicResource WindowBackgroundBrush}"
+                      
+        GlowBrush="{DynamicResource AccentColorBrush}"
+        ResizeMode="CanResizeWithGrip"
+
+        WindowTransitionsEnabled="False"
         DataContext="{Binding Main, Source={StaticResource Locator}}" 
         Icon="{StaticResource ComodoIcon}">
 
@@ -57,4 +62,4 @@
 
         </Grid>
  
-</Window>
+</Controls:MetroWindow>
