--- a/RReplay/View/ReplayJSONView.xaml
+++ b/RReplay/View/ReplayJSONView.xaml
@@ -1,16 +1,22 @@
-﻿<Window x:Class="RReplay.View.ReplayJSONView"
+﻿<Controls:MetroWindow  x:Class="RReplay.View.ReplayJSONView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:ignore="http://www.galasoft.ch/ignore"
         mc:Ignorable="d ignore"
         DataContext="{Binding Main.SelectedReplay, Mode=OneWay, Source={StaticResource Locator}}"
         Width="500"
         Height="600"
+                       
+        GlowBrush="{DynamicResource AccentColorBrush}"
+        ResizeMode="CanResizeWithGrip"
+
+        WindowTransitionsEnabled="False"
         Icon="{StaticResource ViewJsonIcon}">
 
     <Grid>
         <TextBox x:Name="textBox" Margin="10" TextWrapping="Wrap" IsReadOnly="True" Text="{Binding JSONDumbFromFile, Mode=OneTime}" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Visible"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
