--- a/RReplay/View/DetailedView/ReplayView.xaml
+++ b/RReplay/View/DetailedView/ReplayView.xaml
@@ -15,7 +15,7 @@
         <converters:EraCodeToImageSource x:Key="EraCodeToImageSource"/>
 
         <DataTemplate x:Key="PlayerTemplate" >
-            <Border BorderThickness="2" CornerRadius="5" BorderBrush="Black" Width="600" Margin="5,0,0,0" Padding="5">
+            <Border BorderThickness="1" CornerRadius="5" BorderBrush="{DynamicResource AccentColorBrush}" >
                 <StackPanel Orientation="Vertical">
                     <DockPanel >
                         <Label DockPanel.Dock="Left" >Name : </Label>
@@ -137,30 +137,45 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <Grid x:Name="gridTeam1" Grid.Row="0" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2" Width="640" HorizontalAlignment="Left">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="31.28"></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            <DockPanel Grid.Row="0">
-                <Label  FontSize="16">Team 1</Label>
-                <TextBox  DockPanel.Dock="Right" Text="{Binding SelectedReplay.FirstTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" Margin="0,0,5,0"/>
-                <Label  FontSize="16" HorizontalAlignment="Right">Players count :</Label>
-            </DockPanel>
-            <ListBox Grid.Row="1" x:Name="firstTeamListBox" MinHeight="129.22" ItemTemplate="{StaticResource PlayerTemplate}" ItemsSource="{Binding SelectedReplay.FirstTeamPlayers}"/>
-        </Grid>
+        <Border x:Name="gridTeam1" Grid.Row="0" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2" Width="640" HorizontalAlignment="Left"
+                Background="{DynamicResource AccentColorBrush}"
+                SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}"
+                UseLayoutRounding="True" 
+                BorderThickness="1">
+            <Grid >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="31.28"></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <DockPanel Grid.Row="0">
+                    <Label  FontSize="16">Team 1</Label>
+                    <TextBox  DockPanel.Dock="Right" Text="{Binding SelectedReplay.FirstTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" Margin="0,0,5,0"/>
+                    <Label  FontSize="16" HorizontalAlignment="Right">Players count :</Label>
+                </DockPanel>
+                <ListBox Grid.Row="1" x:Name="firstTeamListBox" MinHeight="129.22" ItemTemplate="{StaticResource PlayerTemplate}" ItemsSource="{Binding SelectedReplay.FirstTeamPlayers}"/>
+            </Grid>
+        </Border>
 
-        <Grid x:Name="gridTeam2" Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2" Width="640" HorizontalAlignment="Left">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="31.28"></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            <DockPanel Grid.Row="0">
-                <Label  FontSize="16">Team 2</Label>
-                <TextBox  Text="{Binding SelectedReplay.SecondTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" DockPanel.Dock="Right" Margin="0,0,5,0"/>
-                <Label  FontSize="16" HorizontalAlignment="Right"  DockPanel.Dock="Right">Players count :</Label>
-            </DockPanel>
-            <ListBox Grid.Row="1" x:Name="secondTeamListBox" MinHeight="129.22" ItemTemplate="{DynamicResource PlayerTemplate}" ItemsSource="{Binding SelectedReplay.SecondTeamPlayers}"/>
-        </Grid>
+        <Border x:Name="gridTeam2" Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2" Width="640" HorizontalAlignment="Left" BorderBrush="{DynamicResource AccentColorBrush}"
+                SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}"
+                Background="{DynamicResource AccentColorBrush}"
+                UseLayoutRounding="True" 
+                BorderThickness="1">
+            <Grid >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="31.28"></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <DockPanel Grid.Row="0">
+                    <Label  FontSize="16">Team 2</Label>
+                    <TextBox  Text="{Binding SelectedReplay.SecondTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" DockPanel.Dock="Right" Margin="0,0,5,0"/>
+                    <Label  FontSize="16" HorizontalAlignment="Right"  DockPanel.Dock="Right">Players count :</Label>
+                </DockPanel>
+                <ListBox Grid.Row="1" x:Name="secondTeamListBox" 
+                         MinHeight="129.22" 
+                         ItemTemplate="{DynamicResource PlayerTemplate}" 
+                         ItemsSource="{Binding SelectedReplay.SecondTeamPlayers}"/>
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
